DownloadPDF button mvp works.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://code.jquery.com/jquery.js"></script>
+
 	<!-- Enable highcharts -->
 	<script src="http://code.highcharts.com/highcharts.js"></script>
 	<!-- Enable highcharts to fetch google spreadsheet data -->
@@ -8,11 +10,10 @@
 	<!-- Enable creation of pdf  -->
 	<script src="http://code.highcharts.com/modules/exporting.js"></script>
 	<!-- optional. Enable pdf creation to be done locally w/o highchart server-->
-	<script src="http://code.highcharts.com/modules/offline-exporting.js"></script>
+	<!-- <script src="http://code.highcharts.com/modules/offline-exporting.js"></script> -->
 	<title>EcoGrapher</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <body>
 
@@ -37,6 +38,7 @@
 
 
 				<div class="well col-md-9" id="graph-well">
+
 				</div> <!-- graph-well -->
 
 
