switch back https. heroku has problem.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
 
 	<!-- Enable highcharts -->
 	<script src="http://code.highcharts.com/highcharts.js"></script>
 	<!-- Enable highcharts to fetch google spreadsheet data -->
-	<script src="http://code.highcharts.com/modules/data.js"></script>
+	<script src="https://code.highcharts.com/modules/data.js"></script>
 	<!-- Enable creation of pdf  -->
 	<script src="http://code.highcharts.com/modules/exporting.js"></script>
 	<!-- optional. Enable pdf creation to be done locally w/o highchart server-->
