remove meta veiwport

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="http://code.highcharts.com/modules/exporting.js"></script>
 	<!-- optional. Enable pdf creation to be done locally w/o highchart server-->
 	<!-- <script src="http://code.highcharts.com/modules/offline-exporting.js"></script> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<title>EcoGrapher</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
