--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<title>EcoGrapher</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
