were missing Palmer Index.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 				<ul class="col-md-3">
 					<h3>Select two data-sets to graph</h2>
+					<li class="dataSet">Palmer Drought Severity Index</li>
 					<li class="dataSet">Precipitation</li>
 					<li class="dataSet">Human Pop. (Dona Ana Cnty.)</li>
 					<li class="dataSet">Plant Species Richness</li>
