added some small changes to html and css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<h3>Select two data-sets to graph</h3>
 		<p class="dataSet">Palmer Drought Severity Index</p>
 		<p class="dataSet">Precipitation</p>
-		<p class="dataSet">Human Population (Dona Ana Cnty.)</p>
+		<p class="dataSet">Human Population in Dona Ana County</p>
 		<p class="dataSet">Plant Species Richness</p>
 		<p class="dataSet">Rabbit / Hare Abundance</p>
 		<p class="dataSet">Soil Temperature</p>
